<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/vl_background"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/_defaultResult"/>

        <LinearLayout
            android:id="@+id/hl_row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">


            <Button
                android:id="@+id/bt_1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_1" />

            <Button
                android:id="@+id/bt_2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_2" />

            <Button
                android:id="@+id/bt_3"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_3" />

            <Button
                android:id="@+id/bt_add"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_addition" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hl_row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">

            <Button
                android:id="@+id/bt_4"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_4" />

            <Button
                android:id="@+id/bt_5"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_5" />

            <Button
                android:id="@+id/bt_6"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_6" />

            <Button
                android:id="@+id/bt_sub"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_substract" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hl_row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">

            <Button
                android:id="@+id/bt_7"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_7" />

            <Button
                android:id="@+id/bt_8"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_8" />

            <Button
                android:id="@+id/bt_9"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_9" />

            <Button
                android:id="@+id/bt_mul"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_multiply" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hl_row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">

            <Button
                android:id="@+id/bt_raz"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_raz" />

            <Button
                android:id="@+id/bt_result"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_equal" />

            <Button
                android:id="@+id/bt_0"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_0" />

            <Button
                android:id="@+id/bt_div"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/_divide" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>